--- a/app/src/main/res/layout/item_owner_chat.xml
+++ b/app/src/main/res/layout/item_owner_chat.xml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:contentPadding="@dimen/dimen_8dp"
-    android:layout_gravity="end"
-    app:cardCornerRadius="@dimen/dimen_8dp"
-    app:cardBackgroundColor="@color/colorPrimary"
+    android:gravity="end"
     android:layout_margin="@dimen/dimen_8dp">
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardCornerRadius="@dimen/dimen_8dp"
+        app:contentPadding="@dimen/dimen_8dp">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvContent"
-            android:layout_gravity="start"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/text_size_16sp"
-            android:layout_marginBottom="@dimen/dimen_8dp"
-            android:text="@string/sample_content_message"/>
+            android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sample_date_message"
-            android:textSize="@dimen/text_size_10sp"
-            android:layout_gravity="end"
-            android:textColor="@color/colorWhite"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvContent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginBottom="@dimen/dimen_8dp"
+                android:text="@string/sample_content_message"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/text_size_16sp" />
 
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="@string/sample_date_message"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/text_size_10sp" />
 
-</com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+</RelativeLayout>
