--- a/app/src/main/res/layout/layout_chat_toolbar.xml
+++ b/app/src/main/res/layout/layout_chat_toolbar.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:contentInsetStartWithNavigation="@dimen/dimen_0dp"
+    app:navigationIcon="@drawable/ic_arrow_back">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,8 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/dimen_8dp"
-            android:text="@string/sample_name"
+            android:layout_marginStart="@dimen/dimen_8dp"
+            tools:text="@string/sample_name"
             android:textColor="@color/colorWhite"
             android:textStyle="bold" />
 
