--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="text_size_10sp">10sp</dimen>
     <dimen name="dimen_48dp">48dp</dimen>
     <dimen name="dimen_40dp">40dp</dimen>
+    <dimen name="dimen_0dp">0dp</dimen>
+    <dimen name="dimen_2dp">2dp</dimen>
 </resources>
